tests/expression/function_wrong_ret.sy
start :: fn do
    f : fn -> int = fn do end
    f
end
// error: $Missmatch { .. }
